--- a/app/src/main/res/layout/activity_expert_list.xml
+++ b/app/src/main/res/layout/activity_expert_list.xml
@@ -7,6 +7,7 @@
     tools:context=".chat.ExpertListActivity">
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/expertListRv"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_margin="8dp"
